rust/codec-latex/tests/snapshots/examples__metadata.fine.tex.snap
---
source: rust/codec-latex/tests/examples.rs
expression: "&latex"
---
\section{Introduction}

This is the introduction section.

\section{Methods}

This section describes the methods used.
