rust/codec-latex/tests/snapshots/examples__r.json.snap
---
source: rust/codec-latex/tests/examples.rs
expression: article
---
{
  "type": "Article",
  "content": [
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\\documentclass{article}\n\n\\usepackage{pdflscape}\n\n\\begin{document}\n\n\\title{Knitting LaTeX + R with Stencila}\n\n\\p An example of using R.\n\n"
      }
    },
    {
      "type": "CodeChunk",
      "code": {
        "string": "library(xtable)\n"
      },
      "programmingLanguage": "r",
      "isHidden": true
    },
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\n\n\\p Tables can be made landscape by placing them within a \\verb|landscape| environment, within an \\verb|island| environment  e.g.\n\n"
      }
    },
    {
      "type": "Section",
      "content": [
        {
          "type": "RawBlock",
          "format": "latex",
          "content": {
            "string": "\n\\begin{landscape}\n"
          }
        },
        {
          "type": "CodeChunk",
          "code": {
            "string": "print.xtable(xtable(mtcars))\n"
          }
        },
        {
          "type": "RawBlock",
          "format": "latex",
          "content": {
            "string": "\n\\end{landscape}\n"
          }
        }
      ]
    },
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\n\n"
      }
    },
    {
      "type": "CodeChunk",
      "code": {
        "string": "hist(rnorm(1000), breaks=30, main='')\n"
      }
    },
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\n\n\\p One plus two is "
      }
    },
    {
      "type": "CodeChunk",
      "code": {
        "string": "1 + 2"
      }
    },
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": ".\n\n\\end{document}\n"
      }
    }
  ]
}
